# python-hello-world-package

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
src/cpp/: CMakeLists.txt  bindings.cpp  calculator.cpp  calculator.h  greetings.cpp  greetings.h
src/hello_world/: __init__.py  calculator.py  greetings.py
src/hello_world/cpp/: CMakeLists.txt  __init__.py  greeting.cpp  greetings.cpp
tests/: test_calculator.py  test_calculator_cpp.py  test_greetings.py  test_greetings_cpp.py
