[project]
name = "hello-world-modern-package"
version = "0.1.0"
description = "Testing Python modern package structure"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cowsay>=6.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.7",
]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["cowsay.*"]
ignore_missing_imports = true
