[project]
name = "hello-world-modern-package"
version = "0.1.0"
description = "Testing Python modern package structure"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cowsay>=6.1",
]

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src/hello_world"]
wheel.exclude = ["*.cpp", "CMakeLists.txt"]

[project.optional-dependencies]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.7",
]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["cowsay.*"]
ignore_missing_imports = true
